fix: use "signed in" instead of "signed-in"

--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
@@ -40,14 +40,14 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 ## Adjusting the `webiny.config.ts` Configuration File
 
-There's one additional step we need to complete before we can finally start working on our React application code, and that's adjusting its [`webiny.config.ts`](#) configuration file, located in [`pinterest-clone/app/code`](#) folder. This is where we'll finally use all of the stack output properties that we've added in GraphQL API and React application cloud infrastructure code, and pass them as environment variables to our React application.
+There's one additional step we need to complete before we can finally start working on our React application code, and that's adjusting its [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts) configuration file, located in [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code) folder. This is where we'll finally use all of the stack output properties that we've added in GraphQL API and React application cloud infrastructure code, and pass them as environment variables to our React application.
 
 :::note
 In order to continue, all of the cloud infrastructure additions we did in previous two sections need to be deployed.
 :::
 
 :::note
-Changes made to the [`webiny.config.ts`](#) file aren't automatically picked up by already active watch sessions, initialized with the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. Before you start making any changes, make sure to terminate any active watch sessions you might have and run them again once the [`webiny.config.ts`](#) file is in the right place.
+Changes made to the [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts) file aren't automatically picked up by already active watch sessions, initialized with the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. Before you start making any changes, make sure to terminate any active watch sessions you might have and run them again once the [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts) file is in the right place.
 :::
 
 The following code highlights the changes that need to be performed:
@@ -132,7 +132,7 @@ export default {
 };
 ```
 
-First, we've updated the existing `API_MAP` object, which is used upon retrieving our GraphQL API's stack output:
+First, we've updated the existing [`API_MAP`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L13) object, which is used upon retrieving our GraphQL API's stack output:
 
 ```ts
 getStackOutput({
@@ -142,11 +142,11 @@ getStackOutput({
 });
 ```
 
-As the name itself suggests, the object represents a map. It is used to instruct the [`getStackOutput`](#) function to map the received stack output properties to new ones. This is useful because, in the [`watch`](#) and [`build`](#) commands, we're assigning stack output properties as environment variables, which must contain the `REACT_APP_` prefix in order for us to be able to access them within the actual React application code.
+As the name itself suggests, the object represents a map. It is used to instruct the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L33) function to map the received stack output properties to new ones. This is useful because, in the [`watch`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L29) and [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L52) commands, we're assigning stack output properties as environment variables, which must contain the `REACT_APP_` prefix in order for us to be able to access them within the actual React application code.
 
 So, we've added three new properties to the `API_MAP` object: `REACT_APP_USER_POOL_REGION`, `REACT_APP_USER_POOL_ID`, and `REACT_APP_USER_POOL_DOMAIN`, which will represent the `region`, `cognitoUserPoolId`, and `cognitoUserPoolDomain` properties included in the retrieved GraphQL API's stack output.
 
-We also had to add a new `APP_MAP` map object for the properties that will be retrieved from our React application's stack output. This map is then used with the new `getStackOutput` function call, which has the `pinterest-clone/app` specified as the project application folder:
+We also had to add a new [`APP_MAP`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L21) map object for the properties that will be retrieved from our React application's stack output. This map is then used with the new [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L42) function call, which has the `pinterest-clone/app` specified as the project application folder:
 
 ```ts
 getStackOutput({
@@ -175,9 +175,9 @@ Essentially, the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-pr
 1. compile application code and create a production build of our application
 2. based on the cloud infrastructure code, deploy our application and other defined resources
 
-This means that upon deploying our React application for the first time, the [`getStackOutput`](#) function call, that we've added in the [`build`](#) command in our [`webiny.config.js`](#) file, won't return any results. No deployed cloud infrastructure means no stack output to read from.
+This means that upon deploying our React application for the first time, the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L65) function call, that we've added in the [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L52) command in our [`webiny.config.js`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts) file, won't return any results. No deployed cloud infrastructure means no stack output to read from.
 
-So, when doing the first deployment, we recommend you first deploy your cloud infrastructure resources only, and then proceed by doing another deployment, this time with our application code. We can achieve this with the following command:
+So, when doing the first deployment, we recommend you first deploy your cloud infrastructure resources only, and then proceed by doing another deployment, this time with the application code. We can achieve this with the following command:
 
 ```bash
 yarn webiny deploy pinterest-clone/app --env new-environment --no-build && \
