--- a/docs/tutorials/create-custom-application/security/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/security/getting-started.mdx
@@ -53,7 +53,7 @@ With this approach, the authentication flow is completely offloaded to Amazon Co
   src={hostedUi1}
 />
 
-Once completed successfully, the user is redirected back to our application, but this time, authenticated. Which means we should be able to retrieve the currently signed-in user within both React application and GraphQL API, ultimately enabling us to safely perform sensitive operations like sensitive GraphQL mutations, maybe even file upload, and more.
+Once completed successfully, the user is redirected back to our application, but this time, authenticated. Which means we should be able to retrieve the currently signed in user within both React application and GraphQL API, ultimately enabling us to safely perform sensitive operations like sensitive GraphQL mutations, maybe even file upload, and more.
 
 <CenteredImage
   alt="User Authentication Flow End"
@@ -86,10 +86,10 @@ Learn more about other types of authentication flows that Amazon Cognito offers,
 
 ### `dev` and `prod` Stacks
 
-The GraphQL API's cloud infrastructure code, located in the [`pinterest-clone/api/pulumi`](#) folder, is actually organized as two separate [`dev`](#) and [`prod`](#) folders. This enables us to deploy slightly different cloud infrastructure into non-production and production environments, respectively. In this tutorial, we'll focus on the [`dev`](#) folder, but note that the same changes should be applied within the [`prod`](#) folder as well. We certainly don't want to end up with vital cloud infrastructure resources missing in one or the other.
+The GraphQL API's cloud infrastructure code, located in the [`pinterest-clone/api/pulumi`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction/pinterest-clone/api/pulumi) folder, is actually organized as two separate [`dev`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction/pinterest-clone/api/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction/pinterest-clone/api/pulumi/prod) folders. This enables us to deploy slightly different cloud infrastructure into non-production and production environments, respectively. In this tutorial, we'll focus on the [`dev`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction/pinterest-clone/api/pulumi/dev) folder, but note that the same changes should be applied within the [`prod`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction/pinterest-clone/api/pulumi/prod) folder as well. We certainly don't want to end up with vital cloud infrastructure resources missing in one or the other.
 
 :::info
-Check out the [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api#pulumi) scaffold guide for more information on differences between the `dev` and `prod` folders.
+Check out the [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api#pulumi) scaffold guide for more information on differences between the [`dev`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction/pinterest-clone/api/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction/pinterest-clone/api/pulumi/prod) folders.
 :::
 
 The React application's cloud infrastructure doesn't follow this organization, simply because it's not needed. Which means, there, we'll only need to make a change once and that's it.
@@ -179,7 +179,7 @@ In case you missed it, a Webiny project can consist of one ore more project appl
 
 ### Stack Output
 
-If we were to open the cloud infrastructure code that is initially included during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process, we may notice that at the end of each entrypoint file, for example in [`pinterest-clone/api/pulumi/dev/index.ts`](#), we are returning an object that consists of a couple of properties:
+If we were to open the cloud infrastructure code that is initially included during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process, we may notice that at the end of each entrypoint file, for example in [`pinterest-clone/api/pulumi/dev/index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/api/pulumi/dev/index.ts), we are returning an object that consists of a couple of properties:
 
 ```ts title="pinterest-clone/api/pulumi/dev/index.ts"
 return {
@@ -192,7 +192,7 @@ return {
 
 It's important to note that the returned object represents something called the **cloud infrastructure stack output** or just **stack output**, which, essentially, enables us to expose multiple values that were created during a deployment process. These may entail unique IDs of deployed cloud infrastructure resources, maybe a URL that points to a specific resource, and basically anything else that we might need.
 
-The stack output can then be retrieved within cloud infrastructure or application code that is part of the same, or an entirely separate, [project application](/docs/key-topics/project-organization/project-applications). For example, if we were to open the React application's [`webiny.config.ts`](#) configuration file, located in [`pinterest-clone/app/code/webiny.config.ts`](#), we'd see that we're using the [`getStackOutput`](#) function in order to retrieve the URL over which our GraphQL API can be accessed:
+The stack output can then be retrieved within cloud infrastructure or application code that is part of the same, or an entirely separate, [project application](/docs/key-topics/project-organization/project-applications). For example, if we were to open the React application's [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts) configuration file, located in the [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts) folder, we'd see that we're using the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts#L26) function in order to retrieve the URL over which our GraphQL API can be accessed:
 
 ```ts title="pinterest-clone/app/code/webiny.config.ts" {3,13-16,24-31,38-45}
 import invariant from "invariant";
@@ -249,9 +249,9 @@ export default {
 };
 ```
 
-As we can see, once we've retrieved the stack output values, via [`Object.assign`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/assign), we're assigning them to the `process.env` object. Meaning, we're exposing the retrieved values as environment variables, which we'll be able to use in our React application's code.
+As we can see, once we've retrieved the stack output values, via [`Object.assign`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/assign), we're assigning them to the [`process.env`](https://nodejs.org/api/process.html#process_process_env) object. Meaning, we're exposing the retrieved values as environment variables, which we'll be able to use in our React application's code.
 
-For now, note that in the next couple of sections, we'll be doing a couple of updates to both the stack output and the shown [`webiny.config.ts`](#) configuration file. These will be needed in order to connect the deployed cloud infrastructure resources and our application together.
+For now, note that in the next couple of sections, we'll be doing a couple of updates to both the stack output and the shown [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts) configuration file. These will be needed in order to connect the deployed cloud infrastructure resources and our application together.
 
 :::tip
 Stack output can also be quickly retrieved via [Webiny CLI](/docs/key-topics/webiny-cli), via the `webiny output` command, for example:
@@ -259,5 +259,3 @@ Stack output can also be quickly retrieved via [Webiny CLI](/docs/key-topics/web
 ```bash
 yarn webiny output pinterest-clone/api --env dev
 ```
-
-:::
