--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
@@ -43,9 +43,15 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 ## Adding User Pool and User Pool Domain
 
+:::note
+In this section, we'll be performing all of the needed changes within the [`dev`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/dev) stack. Note that you should perform the same changes within the [`prod`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/prod) stack as well.
+
+In case you missed it, check out the [`dev` and `prod` Stacks](/docs/tutorials/create-custom-application/security/getting-started#dev-and-prod-stacks) section.
+:::
+
 Let's start by defining a new User Pool and a User Pool Domain within our GraphQL API's cloud infrastructure code.
 
-Inside of the [`pinterest-clone/api/pulumi/dev`](#) folder, let's create the new [`cognito.ts`](#) file. It should export the following [`Cognito`](#) class that encapsulates new cloud infrastructure code:
+Inside of the [`pinterest-clone/api/pulumi/dev`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/dev) folder, let's create the new [`cognito.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/dev/cognito.ts) file. It should export the following [`Cognito`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/dev/cognito.ts#L6) class that encapsulates new cloud infrastructure code:
 
 ```ts title="pinterest-clone/api/pulumi/dev/cognito.ts" {13,41}
 import * as aws from "@pulumi/aws";
@@ -112,11 +118,11 @@ As we can see, we're first defining a new User Pool, where we're configuring som
 
 Then, in order to enable the mentioned Hosted UI authentication flow, we're also defining a new User Pool Domain, which only takes two configuration parameters - `domain` and `userPoolId`. Notice how we've assigned `` `pinterest-clone-${process.env.WEBINY_ENV}` `` to the former and used `process.env.WEBINY_ENV` as part of the value. With this approach, we're simply ensuring that within every environment we deploy into, we're using a globally unique domain name. We cannot use (or at least shouldn't) the same domain name within two different environments.
 
-The next step is to import the new file in the existing [`index.ts`](#) entrypoint file, located in the [`pinterest-clone/api/pulumi/dev`](#) folder. Once imported, we'll also need to perform two additional changes.
+The next step is to import the new file in the existing [`index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/dev/index.ts) entrypoint file, located in the [`pinterest-clone/api/pulumi/dev`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/dev) folder. Once imported, we'll also need to perform two additional changes.
 
 First, in order for the new cloud infrastructure code to be actually executed, we'll instantiate the imported `Cognito` class. Second, we will modify the list of returned values, which, as previously mentioned, represents the [stack output](/docs/tutorials/create-custom-application/security/getting-started#stack-output).
 
-Ultimately, this is how the updated [`index.ts`](#) entrypoint file should look like:
+Ultimately, this is how the updated [`index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/dev/index.ts) entrypoint file should look like:
 
 ```ts title="pinterest-clone/api/pulumi/dev/index.ts" {5,17,53-56}
 import DynamoDB from "./dynamoDb";
@@ -193,7 +199,7 @@ If you had the [`webiny watch`](/docs/how-to-guides/use-watch-command) command u
   src={cloudInfraAutoDeploy}
 />
 
-If not, you can either start a new watch session, or simply deploy the changes via the [`webiny deploy`](#) command.
+If not, you can either start a new watch session, or simply deploy the changes via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
 
 <CenteredImage
   alt="Automatic Re-deployment of Cloud Infrastructure"
