--- a/docs/tutorials/create-custom-application/security/introduction.mdx
+++ b/docs/tutorials/create-custom-application/security/introduction.mdx
@@ -40,7 +40,7 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 At the moment, we could certainly say our application is not secure:
 
-- everybody can create pins, even anonymous (not signed-in) users
+- everybody can create pins, even anonymous (not signed in) users
 - when a pin is created, we don't know who did it
 - by directly accessing the GraphQL API via a simple GraphQL client, we can even issue mutations and change the information on pins created by other users (and even delete them)
 
@@ -50,7 +50,7 @@ So, in the next couple of sections, we'll continue working on our **Pinterest Cl
 
 The first one is **authentication**, which, in short, is a process in which we confirm users are who they say they are. We determine their **identity**. Think of sign up and sign in **authentication flows**, these are both ways of **authenticating** users within our application.
 
-On the other hand, we have **authorization**, which, in secure environments, always follows authentication. Essentially, this is a process in which we determine whether a successfully authenticated user has the permission to access a particular resource or not. For example, the created pin can be updated or deleted only by the user who initially created it. Furthermore, we definitely do not want to allow pin creation by **anonymous (not signed-in)** users.
+On the other hand, we have **authorization**, which, in secure environments, always follows authentication. Essentially, this is a process in which we determine whether a successfully authenticated user has the permission to access a particular resource or not. For example, the created pin can be updated or deleted only by the user who initially created it. Furthermore, we definitely do not want to allow pin creation by **anonymous (not signed in)** users.
 
 :::note
 Note that, when talking about **anonymous** users, we're referring to users whose identity is unknown. In other words, users who simply did not sign in to our application.
