--- a/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
@@ -50,17 +50,17 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 With the initial setup taken care of, we're now ready to perform the remaining steps of the Hosted UI authentication flow integration and finally see everything in action. In order to do that, we'll need to adjust the existing header bar.
 
-So, in the top-right corner, if the user is not signed-in, we will show a simple **Sign In** button, like so:
+So, in the top-right corner, if the user is not signed in, we will show a simple **Sign In** button, like so:
 
 <CenteredImage alt="Header Bar - Not Logged In State" src={headerNotLoggedIn} />
 
-On the other hand, if the user is already signed-in, then we'll show the existing **&#10753;** icon, which, as [previously seen](/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog), is used to open the **New Pin** modal dialog.
+On the other hand, if the user is already signed in, then we'll show the existing **&#10753;** icon, which, as [previously seen](/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog), is used to open the **New Pin** modal dialog.
 
-With that, we'll also render signed-in user's avatar, where, at least for now, we'll simply display the first letter of user's first name. And also, once the avatar is clicked, a simple drop down menu will be rendered that will contain a single menu item, and that's the **Sign Out** link.
+With that, we'll also render signed in user's avatar, where, at least for now, we'll simply display the first letter of user's first name. And also, once the avatar is clicked, a simple drop down menu will be rendered that will contain a single menu item, and that's the **Sign Out** link.
 
 <CenteredImage alt="Header Bar - Logged In State" src={headerLoggedIn} />
 
-In order to achieve all of this, let's modify the existing [`Layout`](#) React component:
+In order to achieve all of this, let's modify the existing [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow/pinterest-clone/app/code/src/components/Layout.tsx#L14) React component:
 
 ```tsx title="pinterest-clone/app/code/src/components/Layout.tsx" {5-6,16-18,30-57}
 import React, { useState, useCallback } from "react";
@@ -134,7 +134,7 @@ const Layout: React.FC<{ className: string }> = (props) => {
 export default Layout;
 ```
 
-As we can see, first we're retrieving the currently signed-in user via the [`useSecurity`](#) React hook. Then, if the user was returned, we're rendering the [`Button`](#) and [`Dropdown`](#) components, where the latter contains the mentioned **Sign Out** menu item. Naturally, if no user was returned, them we're just rendering the **Sign In** button.
+As we can see, first we're retrieving the currently signed in user via the [`useSecurity`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow/pinterest-clone/app/code/src/components/Layout.tsx#L16) React hook. Then, if the user was returned, we're rendering the [`Button`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow/pinterest-clone/app/code/src/components/Layout.tsx#L32) and [`Dropdown`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow/pinterest-clone/app/code/src/components/Layout.tsx#L39) components, where the latter contains the mentioned **Sign Out** menu item. Naturally, if no user was returned, them we're just rendering the **Sign In** button.
 
 With all of the previous steps were performed correctly, if we were to click on the **Sign In** button, we should be redirected to the Hosted UI authentication flow, which will initially display the **Sign In** form:
 
@@ -160,7 +160,7 @@ Once we fill all of the fields and submit the form, we should receive the follow
   src={hostedUiVerification}
 />
 
-Finally, by entering the correct code into the field and submitting the form, the sign up process should be successfully concluded and we should be redirected back to our React application. Since we're now signed-in, in the header bar, we should be able to see the **&#10753;** icon button and our avatar (showing the first letter of our first name):
+Finally, by entering the correct code into the field and submitting the form, the sign up process should be successfully concluded and we should be redirected back to our React application. Since we're now signed in, in the header bar, we should be able to see the **&#10753;** icon button and our avatar (showing the first letter of our first name):
 
 <CenteredImage alt="Header Bar - Logged In State" src={headerLoggedInWithoutMenu} />
 
@@ -168,7 +168,7 @@ Finally, by entering the correct code into the field and submitting the form, th
 
 With the Hosted UI authentication flow finally integrated, our users can now sign up and sing in to our application!
 
-And, by only showing the **&#10753;** icon button to signed-in users, we've restricted the anonymous users from opening the **New Pin** modal dialog and creating new pins.
+And, by only showing the **&#10753;** icon button to signed in users, we've restricted the anonymous users from opening the **New Pin** modal dialog and creating new pins.
 
 But, note that without proper authentication and authorization checks implemented on the GraphQL API side, our application can still be considered as not secure. This is because, at the moment, anonymous users are still able to perform sensitive GraphQL mutations, with just a simple GraphQL client. For example, they can still create new pins via the seen `createPin` mutation, or even delete the existing pins created by other users, via the `deletePin` mutation.
 
